<resources>
    <string name="app_name">NYCSchools</string>
    <string name="location">Location: </string>
    <string name="phone_number">Phone Number: </string>
    <string name="school_email">School Email: </string>
    <string name="school_directory_error">Oops, something went wrong. Please try again later</string>
    <string name="school_overview">Overview</string>
    <string name="sat_results">SAT Results</string>
    <string name="loading">Loading</string>
    <string name="num_of_sat_test_takers">Num of SAT Test Takers: </string>
    <string name="sat_critical_reading_avg_score">SAT Critical Reading Avg Score: </string>
    <string name="sat_math_avg_score">SAT Math Avg Score: </string>
    <string name="sat_writing_avg_score">SAT Writing Avg Score: </string>
    <string name="unknown">Unknown</string>
</resources>